--- a/index.html
+++ b/index.html
@@ -2,15 +2,15 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>PhoneGap Build Template Page</title>
+    <title>Yskole! le magazine numerique des jeunes de Babi et de la Côte d'Ivoire</title>
   </head>
   <body>
 
     <header class="bar bar-nav">
-      <h1 class="title">Your Project Title Here</h1>
+      <h1 class="title">Yskole !</h1>
     </header>
 
-	<p style="margin: auto; height: 50px; width: 100%; text-align: center">Loading....</p>
+	<p style="margin: auto; height: 50px; width: 100%; text-align: center">Chargement....</p>
   	
   	<script src="phonegap.js"></script>
 
